src/snapshots/enderpy__lexer__tests__test-lexer-30.snap
---
source: src/lexer.rs
description: "<<="
---
[
    Token {
        kind: ShiftLeftAssign,
        value: None,
        start: 0,
        end: 3,
    },
]
