src/snapshots/enderpy__lexer__tests__test-lexer-31.snap
---
source: src/lexer.rs
description: ">>="
---
[
    Token {
        kind: ShiftRightAssign,
        value: None,
        start: 0,
        end: 3,
    },
]
