src/snapshots/enderpy__lexer__tests__test-lexer-32.snap
---
source: src/lexer.rs
description: "**="
---
[
    Token {
        kind: PowAssign,
        value: None,
        start: 0,
        end: 3,
    },
]
