src/snapshots/enderpy__lexer__tests__test-lexer-34.snap
---
source: src/lexer.rs
description: //
---
[
    Token {
        kind: IntDiv,
        value: None,
    },
]
