src/snapshots/enderpy__lexer__tests__test-lexer-37.snap
---
source: src/lexer.rs
description: +
---
[
    Token {
        kind: Plus,
        value: None,
        start: 0,
        end: 1,
    },
]
