src/snapshots/enderpy__lexer__tests__test-lexer-38.snap
---
source: src/lexer.rs
description: "-"
---
[
    Token {
        kind: Minus,
        value: None,
        start: 0,
        end: 1,
    },
]
