src/snapshots/enderpy__lexer__tests__test-lexer-43.snap
---
source: src/lexer.rs
description: "%"
---
[
    Token {
        kind: Mod,
        value: None,
    },
]
