src/snapshots/enderpy__lexer__tests__test-lexer-44.snap
---
source: src/lexer.rs
description: "@"
---
[
    Token {
        kind: MatrixMul,
        value: None,
        start: 0,
        end: 1,
    },
]
